--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 before_install:
 - openssl aes-256-cbc -K $encrypted_cc1eefc65230_key -iv $encrypted_cc1eefc65230_iv -in docs/deploy_key.enc -out deploy_key -d
 - chmod 600 deploy_key
-- eval "$(ssh-agent -s)
+- eval "$(ssh-agent -s)"
 - ssh-add deploy_key
 
 install:
