--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
 - chmod 600 deploy_key
 - eval "$(ssh-agent -s)"
 - ssh-add deploy_key
+- git remote add gh-token "${GH_REF}"
 
 install:
 - cd docs
