--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 - git config user.email "marius.appel@uni-muenster.de"
 - git add .
 - git commit -m "Automated documentation build[ci skip]"
-- git push --force --quiet "${GH_REF}" master:gh-pages
+- GIT_SSH_COMMAND='ssh -i ../../deploy_key' git push --force --quiet "${GH_REF}" master:gh-pages
 
 
 
