--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,15 @@ script:
 - docker run -v $PWD:/shared openeo/apidocs
 - cd site
 - eval "$(ssh-agent -s)"
-- ssh-add deploy_key
+- ssh-add $TRAVIS_BUILD_DIR/deploy_key
+- ls $TRAVIS_BUILD_DIR/ ###
 - git init
 - git remote add gh-token "${GH_REF}"
 - git config user.name "Travis CI Documentation Builder"
 - git config user.email "marius.appel@uni-muenster.de"
 - git add .
 - git commit -m "Automated documentation build[ci skip]"
-- GIT_SSH_COMMAND='ssh -i ../../deploy_key' git push --force --quiet "${GH_REF}" master:gh-pages
-
+- git push --force --quiet "${GH_REF}" master:gh-pages
+#GIT_SSH_COMMAND='ssh -i ../../deploy_key' 
 
 
