--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ services:
 
 env:
   global:
-  - GIT_NAME: "TravisCI Documentation"
+  - GIT_NAME: "Travis CI Documentation Builder"
   - GIT_EMAIL: marius.appel@uni-muenster.de
   - GH_REF: git@gihub.com:Open-EO/openeo-api-poc.git
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_cc1eefc65230_key -iv $encrypted_cc1eefc65230_iv -in docs/deploy_key.enc -out deploy_key -d
-- chmod 400 deploy_key
+- chmod 600 deploy_key
 - echo -e "Host github \n\t HostName github.com \n\t IdentityFile $TRAVIS_BUILD_DIR/deploy_key" >> ~/.ssh/config
 
 install:
