--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
   - GIT_NAME: "Travis CI Documentation Builder"
   - GIT_EMAIL: marius.appel@uni-muenster.de
-  - GH_REF: git@gihub.com:Open-EO/openeo-api-poc.git
+  - GH_REF: git@github.com:Open-EO/openeo-api-poc.git
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_cc1eefc65230_key -iv $encrypted_cc1eefc65230_iv -in docs/deploy_key.enc -out deploy_key -d
