--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
   - Glossary: glossary.md
   - Architecture and Microservices: arch.md
   - Jobs: jobs.md
+  - Process Graphs: processgraphs.md
   - UDFs: udfs.md
   - Data Views: views.md
   - Proof of Concept: poc.md
