--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,9 @@ script:
 - git clone --branch gh-pages https://github.com/Open-EO/openeo-api-poc /tmp/gh-pages
 - rm -rf /tmp/gh-pages/$TRAVIS_BRANCH
 - mkdir /tmp/gh-pages/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/$TRAVIS_BRANCH/
-- if [ $TRAVIS_BRANCH == master] ; then cp -R site/* /tmp/gh-pages/ ; fi
+- if [[ $TRAVIS_BRANCH == 'master' ]] ; then cp -R site/* /tmp/gh-pages/ ; fi
 - git config user.name "Travis CI Documentation Builder"
 - git config user.email "marius.appel@uni-muenster.de"
 - cd /tmp/gh-pages && git add .
 - git commit -m "Automated documentation build[ci skip]"
 - git push --force "${GH_REF}" gh-pages:gh-pages
-
-
-
