openeo-api-poc => openeo-api

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,6 +10,6 @@ pages:
   - Proof of Concept: poc.md
   - API Reference: apireference.md
 theme: readthedocs
-repo_url: https://github.com/Open-EO/openeo-api-poc
+repo_url: https://github.com/Open-EO/openeo-api
 site_favicon: favicon.ico
 use_directory_urls: false # make links working on local filesystem too
