--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
   - GIT_NAME: "Travis CI Documentation Builder"
   - GIT_EMAIL: marius.appel@uni-muenster.de
-  - GH_REF: git@github.com:Open-EO/openeo-api-poc.git
+  - GH_REF: git@github.com:Open-EO/openeo-api.git
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_cc1eefc65230_key -iv $encrypted_cc1eefc65230_iv -in docs/deploy_key.enc -out deploy_key -d
@@ -22,7 +22,7 @@ script:
 - docker run -v $PWD:/shared --env TRAVIS_BRANCH=$TRAVIS_BRANCH openeo/apidocs
 - eval "$(ssh-agent -s)"
 - ssh-add $TRAVIS_BUILD_DIR/deploy_key
-- git clone --branch gh-pages https://github.com/Open-EO/openeo-api-poc /tmp/gh-pages
+- git clone --branch gh-pages https://github.com/Open-EO/openeo-api /tmp/gh-pages
 - rm -rf /tmp/gh-pages/$TRAVIS_BRANCH
 - mkdir /tmp/gh-pages/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/$TRAVIS_BRANCH/
 - if [[ $TRAVIS_BRANCH == 'master' ]] ; then cp -R site/* /tmp/gh-pages/ ; fi
