--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ script:
 - ssh-add $TRAVIS_BUILD_DIR/deploy_key
 - git clone --branch gh-pages https://github.com/Open-EO/openeo-api /tmp/gh-pages
 - if [[ $TRAVIS_BRANCH == 'master' ]] ; then cd /tmp/gh-pages/ && rm -rf !(v) && cd - && cp -R site/* /tmp/gh-pages/ ; fi
-- if [[ $TRAVIS_BRANCH != 'master' ]] ; rm -rf /tmp/gh-pages/v/$TRAVIS_BRANCH && mkdir -p /tmp/gh-pages/v/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/v/$TRAVIS_BRANCH/ ; fi
+- if [[ $TRAVIS_BRANCH != 'master' ]] ; then rm -rf /tmp/gh-pages/v/$TRAVIS_BRANCH && mkdir -p /tmp/gh-pages/v/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/v/$TRAVIS_BRANCH/ ; fi
 - git config user.name "Travis CI Documentation Builder"
-- git config user.email "marius.appel@uni-muenster.de"
+- git config user.email "marius
+.appel@uni-muenster.de"
 - cd /tmp/gh-pages && git add .
 - git commit -m "Automated documentation build[ci skip]"
 - git push --force "${GH_REF}" gh-pages:gh-pages
