--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ script:
 - if [[ $TRAVIS_BRANCH == 'master' ]] ; then cd /tmp/gh-pages/ && rm -rf !(v) && cd - && cp -R site/* /tmp/gh-pages/ ; fi
 - if [[ $TRAVIS_BRANCH != 'master' ]] ; then rm -rf /tmp/gh-pages/v/$TRAVIS_BRANCH && mkdir -p /tmp/gh-pages/v/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/v/$TRAVIS_BRANCH/ ; fi
 - git config user.name "Travis CI Documentation Builder"
-- git config user.email "marius
-.appel@uni-muenster.de"
+- git config user.email "marius.appel@uni-muenster.de"
 - cd /tmp/gh-pages && git add .
 - git commit -m "Automated documentation build[ci skip]"
 - git push --force "${GH_REF}" gh-pages:gh-pages
