First iteration of new error handling concept (#36)

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -7,6 +7,7 @@ pages:
   - Process Graphs: processgraphs.md
   - UDFs: udfs.md
   - Data Views: views.md
+  - Error handling: errors.md
   - CORS: cors.md
   - Proof of Concept: poc.md
   - API Reference: apireference.md
