--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,6 +3,7 @@ pages:
   - Home: index.md
   - Glossary: glossary.md
   - Architecture and Microservices: arch.md
+  - User Management and Accounting: usermanagement.md
   - Jobs: jobs.md
   - Process Graphs: processgraphs.md
   - UDFs: udfs.md
