Solved #4 and improvements to constraints and crs.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -7,7 +7,7 @@ pages:
   - Jobs: jobs.md
   - Process Graphs: processgraphs.md
   - UDFs: udfs.md
-  - Data Views: views.md
+  - Constraints: views.md
   - Error handling: errors.md
   - CORS: cors.md
   - Proof of Concept: poc.md
