Added API guidelines, adopted API spec to guidelines, added authentication procedures, ...

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,15 +3,18 @@ pages:
   - Home: index.md
   - Glossary: glossary.md
   - Architecture and Microservices: arch.md
-  - User Management and Accounting: usermanagement.md
-  - Jobs: jobs.md
-  - Process Graphs: processgraphs.md
-  - UDFs: udfs.md
-  - Constraints: views.md
-  - Error handling: errors.md
-  - CORS: cors.md
-  - Proof of Concept: poc.md
+  - API Guidelines:
+    - General Guidelines: guidelines.md
+    - Error handling: errors.md
+    - CORS: cors.md
+  - API Features:
+    - User Management and Accounting: usermanagement.md
+    - Jobs: jobs.md
+    - UDFs: udfs.md
+    - Process Graphs: processgraphs.md
+    - Constraints: views.md
   - API Reference: apireference.md
+  - Proof of Concept: poc.md
 theme: readthedocs
 repo_url: https://github.com/Open-EO/openeo-api
 site_favicon: favicon.ico
