--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,7 +13,8 @@ pages:
     - UDFs: udfs.md
     - Process Graphs: processgraphs.md
     - Constraints: views.md
-  - API Reference: apireference.md
+  - API Reference (Official): apireference.md
+  - API Reference (Alternative): https://rebilly.github.io/ReDoc/?url=https://raw.githubusercontent.com/Open-EO/openeo-api/0.3.0/openapi.json
   - Proof of Concept: poc.md
 theme: readthedocs
 repo_url: https://github.com/Open-EO/openeo-api
