Improved API reference generation, added ReDoc as alternative.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,6 +13,7 @@ pages:
     - UDFs: udfs.md
     - Process Graphs: processgraphs.md
   - API Reference: apireference.md
+  - API Reference (alternative): apireference/redoc.html
   - Proof of Concept: poc.md
 theme: readthedocs
 repo_url: https://github.com/Open-EO/openeo-api
