Rework of the documentation after Hackathon (first draft)

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,21 +1,29 @@
-site_name: openEO - Concepts & API
+site_name: openEO Documentation
 pages:
-  - Home: index.md
-  - Glossary: glossary.md
-  - Architecture and Microservices: arch.md
-  - API Guidelines:
-    - General Guidelines: guidelines.md
-    - Error handling: errors.md
-    - CORS: cors.md
-  - API Features:
+  - Prologue:
+    - Introduction: index.md
+    - Glossary: glossary.md
+    - Contributor Code of Conduct: code_of_conduct.md
+    - Software Development Guidelines: software_guidelines.md
+  - Getting started:
+    - Users: getting_started/users.md
+    - Back-end providers: getting_started/backends.md
+    - Examples / Proof of Concept: poc.md
+  - Architecture: arch.md
+  - Features:
     - User Management and Accounting: usermanagement.md
     - Jobs: jobs.md
     - UDFs: udfs.md
+  - Core API:
+    - Specification Guidelines: api_guidelines.md
+    - Error handling: errors.md
+    - CORS: cors.md
     - Process Graphs: processgraphs.md
   - API Reference: apireference.md
-  - API Reference (alternative): apireference/redoc.html
-  - Proof of Concept: poc.md
-theme: readthedocs
+theme:
+  name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
 site_favicon: favicon.ico
-use_directory_urls: false # make links working on local filesystem too
+use_directory_urls: false
+markdown_extensions:
+  - admonition
