Added pip install

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:xenial
 
-RUN apt-get update && apt-get install -y git software-properties-common build-essential curl mkdocs
+RUN apt-get update && apt-get install -y git software-properties-common build-essential curl mkdocs python3-pip
 RUN pip install mkdocs-material
 
 WORKDIR /opt
