--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,11 @@ pages:
   - Prologue:
     - Introduction: index.md
     - Glossary: glossary.md
-    - Contributor Code of Conduct: code_of_conduct.md
-    - Software Development Guidelines: software_guidelines.md
+    - Contributor Code of Conduct: codeofconduct.md
+    - Software Development Guidelines: softwareguidelines.md
   - Getting started:
-    - Users: getting_started/users.md
-    - Back-end providers: getting_started/backends.md
+    - Users: gettingstarted-users.md
+    - Back-end providers: gettingstarted-backends.md
     - Examples / Proof of Concept: poc.md
   - Architecture: arch.md
   - Features:
@@ -15,7 +15,7 @@ pages:
     - Jobs: jobs.md
     - UDFs: udfs.md
   - Core API:
-    - Specification Guidelines: api_guidelines.md
+    - Specification Guidelines: apiguidelines.md
     - Error handling: errors.md
     - CORS: cors.md
     - Process Graphs: processgraphs.md
@@ -23,7 +23,6 @@ pages:
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
-site_favicon: favicon.ico
 use_directory_urls: false
 markdown_extensions:
   - admonition
