--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,22 @@
-sudo: required
-services:
-- docker
+language: python
+python:
+- "3.5"
 
-env:
-  global:
-  - GIT_NAME: "Travis CI Documentation Builder"
-  - GIT_EMAIL: marius.appel@uni-muenster.de
-  - GH_REF: git@github.com:Open-EO/openeo-api.git
+sudo: required
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_cc1eefc65230_key -iv $encrypted_cc1eefc65230_iv -in docs/deploy_key.enc -out deploy_key -d
-- chmod 600 deploy_key
-- echo -e "Host github \n\t HostName github.com \n\t IdentityFile $TRAVIS_BUILD_DIR/deploy_key" >> ~/.ssh/config
+- pip install mkdocs
+- pip install mkdocs-material
 
 install:
-- cd docs
-- docker build -t openeo/apidocs .
+- mkdocs build --clean
 
 script:
-- rm -rf site
-- docker run -v $PWD:/shared --env TRAVIS_BRANCH=$TRAVIS_BRANCH openeo/apidocs
-- eval "$(ssh-agent -s)"
-- ssh-add $TRAVIS_BUILD_DIR/deploy_key
-- git clone --branch gh-pages https://github.com/Open-EO/openeo-api /tmp/gh-pages
-- if [[ $TRAVIS_BRANCH == 'master' ]] ; then cd /tmp/gh-pages/ && rm -rf !(v) && cd - && cp -R site/* /tmp/gh-pages/ ; fi
-- if [[ $TRAVIS_BRANCH != 'master' ]] ; then rm -rf /tmp/gh-pages/v/$TRAVIS_BRANCH && mkdir -p /tmp/gh-pages/v/$TRAVIS_BRANCH/ && cp -R site/* /tmp/gh-pages/v/$TRAVIS_BRANCH/ ; fi
+- git clone --branch gh-pages https://$GITHUB_TOKEN@github.com/Open-EO/openeo-api.git gh-pages
+- if [[ $TRAVIS_BRANCH == 'master' ]] ; then cd gh-pages/ && rm -rf !(v) && cd - && cp -R site/* gh-pages/ ; fi
+- if [[ $TRAVIS_BRANCH != 'master' ]] ; then rm -rf gh-pages/v/$TRAVIS_BRANCH && mkdir -p gh-pages/v/$TRAVIS_BRANCH/ && cp -R site/* gh-pages/v/$TRAVIS_BRANCH/ ; fi
 - git config user.name "Travis CI Documentation Builder"
 - git config user.email "m.mohr@uni-muenster.de"
-- cd /tmp/gh-pages && git add .
+- cd gh-pages && git add .
 - git commit -m "Automated documentation build[ci skip]"
 - git push --force "${GH_REF}" gh-pages:gh-pages
