--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ pages:
     - Error handling: errors.md
     - CORS: cors.md
     - Process Graphs: processgraphs.md
-  - API Reference: apireference.md
+  - API Reference: apireference.html
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
