Fixing Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
 - git config user.email "m.mohr@uni-muenster.de"
 - git add .
 - git commit -m "Automated documentation build[ci skip]"
-- git push --force "${GH_REF}" gh-pages:gh-pages
+- git push --force "$GITHUB_TOKEN@github.com:Open-EO/openeo-api.git" gh-pages:gh-pages
