Fixing Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
+  committer-from-gh: true
+  on:
+    all_branches: true
