Fixing Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ deploy:
   github-token: $GITHUB_TOKEN
   keep-history: true
   committer-from-gh: true
+  local-dir: gh-pages
   on:
     all_branches: true
