--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,12 +14,12 @@ pages:
     - User Management and Accounting: usermanagement.md
     - Jobs: jobs.md
     - UDFs: udfs.md
-  - Core API:
+  - API:
     - Specification Guidelines: apiguidelines.md
     - Error handling: errors.md
     - CORS: cors.md
     - Process Graphs: processgraphs.md
-  - API Reference: apireference.html
+  - API Reference: apireference.md
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
