Improved process discovery, e.g. process schemas utilize JSON schema. Process specification improved in docs.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,10 +15,11 @@ pages:
     - Jobs: jobs.md
     - UDFs: udfs.md
   - API:
+    - Processes: processes.md
+    - Process Graphs: processgraphs.md
     - Specification Guidelines: apiguidelines.md
     - Error handling: errors.md
     - CORS: cors.md
-    - Process Graphs: processgraphs.md
   - API Reference: apireference.md
 theme:
   name: 'material'
