Improved documentation, especially getting started guides.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,21 +4,24 @@ pages:
     - Introduction: index.md
     - Glossary: glossary.md
     - Contributor Code of Conduct: codeofconduct.md
-    - Software Development Guidelines: softwareguidelines.md
   - Getting started:
     - Users: gettingstarted-users.md
-    - Back-end providers: gettingstarted-backends.md
+    - Back-end Providers: gettingstarted-backends.md
+    - Client Developers: gettingstarted-clients.md
     - Examples / Proof of Concept: poc.md
   - Architecture: arch.md
   - Features:
     - User Management and Accounting: usermanagement.md
     - Jobs: jobs.md
     - UDFs: udfs.md
+  - Development guidelines:
+    - Software Development: guidelines-software.md
+    - Client Library Development: guidelines-clients.md
+    - API Specification: guidelines-api.md
   - API:
     - Processes: processes.md
     - Process Graphs: processgraphs.md
-    - Specification Guidelines: apiguidelines.md
-    - Error handling: errors.md
+    - Error Handling: errors.md
     - CORS: cors.md
   - API Reference: apireference.md
 theme:
