--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ sudo: required
 before_install:
 - pip install mkdocs
 - pip install mkdocs-material
+- pip install pymdown-extensions
+- pip install pygments
 
 install:
 - mkdocs build --clean
