--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ pages:
     - Users: gettingstarted-users.md
     - Back-end Providers: gettingstarted-backends.md
     - Client Developers: gettingstarted-clients.md
-    - Examples / Proof of Concept: poc.md
+    - Examples (proof-of-concept): examples-poc.md
   - Architecture: arch.md
   - Features:
     - User Management and Accounting: usermanagement.md
@@ -30,3 +30,5 @@ repo_url: https://github.com/Open-EO/openeo-api
 use_directory_urls: false
 markdown_extensions:
   - admonition
+  - codehilite
+  - pymdownx.superfences
