Process doc generation

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ before_install:
 install:
 - mkdocs build --clean
 - cp openapi.json site/
+- cp processes.json site/
 - rm site/apireference/index.html
+- rm site/processreference/index.html
 - mv site/apireference.html site/apireference/index.html
+- mv site/processreference.html site/processreference/index.html
 
 script:
 - git clone --branch gh-pages https://$GITHUB_TOKEN@github.com/Open-EO/openeo-api.git gh-pages
