--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 - mkdocs build --clean
 - cp openapi.json site/
 - cp processes.json site/
-- rm site/apireference/index.html
-- rm site/processreference/index.html
+- rm -f site/apireference/index.html
+- rm -f site/processreference/index.html
 - mv site/apireference.html site/apireference/index.html
 - mv site/processreference.html site/processreference/index.html
 
