--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,9 @@ pages:
     - Client Library Development: guidelines-clients.md
     - API Specification: guidelines-api.md
   - API:
-    - Processes: processes.md
+    - Processes
+      - Introduction: processes.md
+      - Reference: processreference.md
     - Process Graphs: processgraphs.md
     - Error Handling: errors.md
     - CORS: cors.md
