--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ pages:
     - Client Library Development: guidelines-clients.md
     - API Specification: guidelines-api.md
   - API:
-    - Processes
+    - Processes:
       - Introduction: processes.md
       - Reference: processreference.md
     - Process Graphs: processgraphs.md
