--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,13 +19,12 @@ pages:
     - Client Library Development: guidelines-clients.md
     - API Specification: guidelines-api.md
   - API:
-    - Processes:
-      - Introduction: processes.md
-      - Reference: processreference.md
+    - Processes: processes.md
     - Process Graphs: processgraphs.md
     - Error Handling: errors.md
     - CORS: cors.md
   - API Reference: apireference.md
+  - Process Reference: processreference.md
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
