--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,8 @@ pages:
     - Process Graphs: processgraphs.md
     - Error Handling: errors.md
     - CORS: cors.md
-  - API Reference: apireference.md
+  - Core API Reference: apireference.md
+  - Subscriptions API Reference: apireference-subscriptions.md
   - Process Reference: processreference.md
 theme:
   name: 'material'
