--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: openEO Documentation
-pages:
+nav:
   - Prologue:
     - Introduction: index.md
     - Glossary: glossary.md
@@ -29,7 +29,7 @@ pages:
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
-use_directory_urls: false
+use_directory_urls: true
 markdown_extensions:
   - admonition
   - codehilite
