Adding more information about data discovery and minor fixes.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Client Library Development: guidelines-clients.md
     - API Specification: guidelines-api.md
   - API:
+    - Data Discovery: collections.md
     - Processes: processes.md
     - Process Graphs: processgraphs.md
     - Error Handling: errors.md
