Converted the poc use cases to the new API version.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
     - Users: gettingstarted-users.md
     - Back-end Providers: gettingstarted-backends.md
     - Client Developers: gettingstarted-clients.md
-    - Examples (proof-of-concept): examples-poc.md
+    - Examples (proof of concept): examples-poc.md
   - Architecture: arch.md
   - Features:
     - User Management and Accounting: usermanagement.md
