Added changelog to generated documentation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 - npm install -g asyncapi-docgen
 
 install:
+- mv CHANGELOG.md docs/changelog.md
 - mkdocs build --clean
 - cp openapi.json site/
 - cp processes.json site/
