--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ nav:
     - Introduction: index.md
     - Glossary: glossary.md
     - Contributor Code of Conduct: codeofconduct.md
+    - Changelog: changelog.md
   - Getting started:
     - Users: gettingstarted-users.md
     - Back-end Providers: gettingstarted-backends.md
