Improved definition of error codes and messages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ sudo: required
 before_install:
 - pip install mkdocs
 - pip install mkdocs-material
+- pip install mkdocs-macros-plugin
 - pip install pymdown-extensions
 - pip install pygments
 - npm install -g asyncapi-docgen
@@ -17,8 +18,7 @@ before_install:
 install:
 - mv CHANGELOG.md docs/changelog.md
 - mkdocs build --clean
-- cp openapi.json site/
-- cp processes.json site/
+- cp *.json site/
 - rm -f site/apireference/index.html
 - rm -f site/processreference/index.html
 - rm -f site/apireference-subscriptions/index.html
