Improvements for TOC in rendered documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,9 @@ markdown_extensions:
   - admonition
   - codehilite
   - pymdownx.superfences
+  - toc:
+      toc_depth: 3
+      permalink: true
 plugins:
   - search
   - macros
