Processes in individual files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ before_install:
 - pip install pymdown-extensions
 - pip install pygments
 - npm install -g asyncapi-generator
+- npm install -g concat-json-files
 
 install:
+- concat-json-files "processes/*.json" -t "processes.json"
 - mv CHANGELOG.md docs/changelog.md
 - ag subscriptions.json markdown
 - \mv -f asyncapi.md docs/apireference-subscriptions.md
