Copy processes to process reference for processes.openeo.org

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 - cp *.json site/
 - \mv -f docs/apireference.html site/apireference/index.html
 - \mv -f docs/processreference.html site/processreference/index.html
+- cp processes/*.json site/processreference/
 
 script:
 - git clone --branch gh-pages https://$GITHUB_TOKEN@github.com/Open-EO/openeo-api.git gh-pages
