Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/processreference/apply.json
+++ b/v/0.4.0/processreference/apply.json
@@ -1,7 +1,7 @@
 {
     "id": "apply",
     "summary": "Applies a local/unary process to a raster data cube.",
-    "description": "Applies a local non-reducer to a raster data cube. Focal calculations can be made by setting the kernel. For zonal apply see `aggregate_zonal`. Returns a new raster data cube. The kernel has to be as many dimensions as the datacube has dimensions.",
+    "description": "Applies a local non-reducer to a raster data cube. Focal calculations can be made by setting the kernel. For zonal apply see ``aggregate_zonal()``. Returns a new raster data cube. The kernel has to be as many dimensions as the datacube has dimensions.",
     "categories": [
         "cubes"
     ],
