--- a/v/0.4.0/processreference/apply.json
+++ b/v/0.4.0/processreference/apply.json
@@ -1,13 +1,14 @@
 {
     "id": "apply",
-    "summary": "Applies a local/unary process to a raster data cube.",
-    "description": "Applies a local non-reducer to a raster data cube. Focal calculations can be made by setting the kernel. For zonal apply see ``aggregate_zonal()``. Returns a new raster data cube. The kernel has to be as many dimensions as the datacube has dimensions.",
+    "summary": "Applies a process to each pixel",
+    "description": "Applies a unary process (a local operation) to each value of the specified or all dimensions in the data cube.",
     "categories": [
         "cubes"
     ],
+    "parameter_order": ["data", "process", "dimensions"],
     "parameters": {
         "data": {
-            "description": "",
+            "description": "A data cube.",
             "schema": {
                 "type": "object",
                 "format": "raster-cube"
@@ -15,7 +16,7 @@
             "required": true
         },
         "process": {
-            "description": "",
+            "description": "A process (callback) to be applied on each value. The specified process must be unary meaning that it must work on a single value.",
             "schema": {
                 "type": "object",
                 "format": "callback",
@@ -27,35 +28,19 @@
             },
             "required": true
         },
-        "kernel": {
-            "description": "",
+        "dimensions": {
+            "description": "The names of the dimensions to apply the process on. Defaults to an empty array so that all dimensions are used.",
             "schema": {
-                "oneOf": [
-                    {
-                        "type": "number"
-                    },
-                    {
-                        "type": "array",
-                        "items": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "type": "array",
-                        "items": {
-                            "type": "array",
-                            "items": {
-                                "type": "number"
-                            }
-                        }
-                    }
-                ],
-                "default": 1
+                "type": "array",
+                "items": {
+                    "type": "string"
+                },
+                "default": []
             }
         }
     },
     "returns": {
-        "description": "",
+        "description": "A data cube with the newly computed values. The resolution, cardinality and the number of dimensions are the same as for the original data cube.",
         "schema": {
             "type": "object",
             "format": "raster-cube"
