Add speccy validation

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
 - pip install pygments
 - npm install -g asyncapi-generator
 - npm install -g concat-json-files
+- npm install -g speccy
+- speccy lint openapi.json -r "speccy.yml"
 
 install:
 - concat-json-files "processes/*.json" -t "processes.json"
