Fixed the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - pip install mkdocs-macros-plugin
 - pip install pymdown-extensions
 - pip install pygments
-- npm install -g asyncapi-generator
+- npm install -g asyncapi-generator@0.6.7 # 0.7 only supports AsyncAPI 2.0
 - npm install -g concat-json-files
 - npm install -g speccy
 - speccy lint openapi.json -r "speccy.yml"
