--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,10 @@ install:
 - pip install pygments
 - npm install -g asyncapi-generator@0.6.7 # 0.7 only supports AsyncAPI 2.0
 - npm install -g concat-json-files
+- pip install -r tests/requirements.txt
 
 script:
+- pytest tests
 - concat-json-files "processes/*.json" -t "processes.json"
 - mv CHANGELOG.md docs/changelog.md
 - ag subscriptions.json markdown
