--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ install:
 - pip install pygments
 - npm install -g asyncapi-generator@0.6.7 # 0.7 only supports AsyncAPI 2.0
 - npm install -g concat-json-files
-- pip install -r tests/requirements.txt
+- pip install -r tests/requirements.txt  # DIY example validation (PR#194)
 
 script:
-- pytest tests
+- pytest tests  # DIY example validation (PR#194)
 - concat-json-files "processes/*.json" -t "processes.json"
 - mv CHANGELOG.md docs/changelog.md
 - ag subscriptions.json markdown
