--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ sudo: required
 
 before_install:
 - npm install -g speccy
-- speccy lint openapi.json -r "speccy.yml"
+- speccy lint openapi.yaml -r "speccy.yml"
 - pip install openapi-spec-validator
-- openapi-spec-validator openapi.json
+- openapi-spec-validator openapi.yaml
 # DIY example validation (PR#194)
 - pip install -r tests/requirements.txt
 - pytest tests
