Started centralizing API specific documentation in the OpenAPI file. #231

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,21 +11,14 @@ nav:
     - Client Developers: gettingstarted-clients.md
     - Examples (proof of concept): examples-poc.md
   - Architecture: arch.md
-  - User Management and Accounting: usermanagement.md
   - UDFs: udfs.md
-  - API:
-    - Data Discovery: collections.md
-    - Processes: processes.md
-    - Process Graphs: processgraphs.md
-    - Error Handling: errors.md
-    - CORS: cors.md
   - Development guidelines:
     - Software Development: guidelines-software.md
     - Client Library Development: guidelines-clients.md
-    - API Specification: guidelines-api.md
   - Core API Reference: apireference.md
   - Subscriptions API Reference: apireference-subscriptions.md
   - Process Reference: processreference.md
+  - Error Codes: errors.md
 theme:
   name: 'material'
 repo_url: https://github.com/Open-EO/openeo-api
