--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,9 @@ script:
 - ag subscriptions.json markdown
 - \mv -f asyncapi.md docs/apireference-subscriptions.md
 - mkdocs build --clean
-- cp *.json site/
+- cp errors.json site/
+- cp subscriptions.json site/
+- cp openapi.yaml site/
 - \mv -f docs/apireference.html site/apireference/index.html
 - \mv -f docs/processreference.html site/processreference/index.html
 - cp processes/*.json site/processreference/
