--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ install:
 - npm install -g concat-json-files
 
 script:
-- concat-json-files "processes/*.json" -t "processes.json"
 - mv CHANGELOG.md docs/changelog.md
 - mkdocs build --clean
 - cp errors.json site/
 - cp openapi.yaml site/
 - \mv -f docs/apireference.html site/apireference/index.html
 - \mv -f docs/processreference.html site/processreference/index.html
+- concat-json-files "processes/*.json" -t "site/processes.json"
 - cp processes/*.json site/processreference/
 
 before_deploy:
