--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
     - Software Development: guidelines-software.md
     - Client Library Development: guidelines-clients.md
   - Core API Reference: apireference.md
-  - Process Reference: processreference.md
+  - Process Reference: https://processes.openeo.org
   - Error Codes: errors.md
 theme:
   name: 'material'
