Migrate to spectral for OpenAPI validation

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,13 @@
-language: python
-
-python:
-- "3.5"
+language: node_js
 
 node_js:
 - "8"
 
 sudo: required
 
-before_install:
-# Speccy
-- npm install -g speccy
-- speccy lint openapi.yaml -r tests/speccy.yml
-# OpenAPI Spec Validator
-- pip install openapi-spec-validator
-- openapi-spec-validator openapi.yaml
-# DIY example validation (PR#194)
-- pip install -r tests/requirements.txt
-- pytest tests
-
 install:
 - npm install
+- npm test
 
 script:
 - npm run build
